k8s-yaml/nginx-demo/nginx-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-svc
  labels:
    app: nginx
    role: web
spec:
  ports:
    # the port that this service should serve on
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    app: nginx
    role: web
